--- a/style.css
+++ b/style.css
@@ -25,7 +25,45 @@ section {
     }
 }
 
+.input-box{
+    width: 310px;
+    margin: 30px;
+    border-bottom: 2px solid #555;
+   
+
+}
+.input-box label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translate(-50%);
+    font-size: 1em;
+    color: #ffff;
+    pointer-events: none;
+}
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: white;
+}
+
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    color: white;
+    font-size: 1.2em;
+    line-height: 57px;
+
+}
+
+
+
 .login-box {
+    
     position: relative;
     width: 400px;
     height: 450px;
@@ -33,7 +71,27 @@ section {
     border: 2px solid rgba(225, 225, 225, 0.5);
     border-radius: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(15px);
+    
+}
+
+body
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #000;
+
+
+} 
+
+h2{
+    font-size: 2em;
+    color: white;
+
+
 }
