--- a/style.css
+++ b/style.css
@@ -25,23 +25,29 @@ section {
     }
 }
 
-.input-box{
+.input-box {
     width: 310px;
-    margin: 30px;
-    border-bottom: 2px solid #555;
-   
-
+    margin: 30px 0;
+    position: relative;
 }
+
 .input-box label {
     position: absolute;
     top: 50%;
     left: 5px;
-    transform: translate(-50%);
+    transform: translateY(-50%);
     font-size: 1em;
-    color: #ffff;
+    color: #fff;
     pointer-events: none;
+    transition: .5s;
 }
-.input-box input{
+
+.input-box input:focus ~ label, 
+.input-box input:valid ~ label {
+    top: -5px;
+}
+
+.input-box input {
     width: 100%;
     height: 50px;
     background: transparent;
@@ -49,21 +55,19 @@ section {
     outline: none;
     font-size: 1em;
     color: white;
+    padding: 0 35px 0 5px;
 }
 
 .input-box .icon {
     position: absolute;
     right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
     color: white;
     font-size: 1.2em;
-    line-height: 57px;
-
 }
 
-
-
 .login-box {
-    
     position: relative;
     width: 400px;
     height: 450px;
@@ -75,23 +79,84 @@ section {
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(15px);
-    
 }
 
-body
-{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #000;
+}
 
-
-} 
-
-h2{
+h2 {
     font-size: 2em;
     color: white;
+    text-align: center;
+}
 
+.remember-forget {
+    margin: -15px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.remember-forget label input {
+    margin-right: 3px;
+}
+
+.remember-forget a {
+    color: white;
+}
+
+.remember-forget a:hover {
+    text-decoration: underline;
+}
+
+button {
+    width: 200px;
+    height: 40px;
+    background: white;
+    max-width: 200px;
+    border: none;
+    margin: 30px auto;
+    outline: none;
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 1em;
+    color: black;
+    font-weight: 500;
+    padding: 10px 20px;
+    align-content: center;
+}
+
+.register-link {
+    font-size: 0.9em;
+    color: white;
+    text-align: center;
+    margin: 10px 0 10px;
+}
+
+.register-link p a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.register-link p a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 360px) {
+    .login-box {
+        width: 100%;
+        height: 100vh;
+        border: none;
+        border-radius: 0;
+    }
+    .input-box {
+        width: 290px;
+    }
 }
